# DnaOneCalc

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
src/dnaonecalc-host/: Cargo.toml
src/dnaonecalc-host/src/: app.rs  artifact.rs  capsule.rs  conditional_formatting.rs  document.rs  extension.rs  function_surface.rs  lib.rs  main.rs  observation.rs  retained.rs  runtime.rs  shell.rs  state.rs  test_support.rs  workspace.rs
src/dnaonecalc-host/src/adapters/: mod.rs
src/dnaonecalc-host/src/adapters/oxfml/: bridge.rs  live_bridge.rs  mod.rs  preview_bridge.rs  types.rs
src/dnaonecalc-host/src/app/: case_lifecycle.rs  host_mount.rs  intents.rs  mod.rs  preview_state.rs  reducer.rs
src/dnaonecalc-host/src/domain/: ids.rs
src/dnaonecalc-host/src/extensions/: mod.rs
src/dnaonecalc-host/src/persistence/: mod.rs
src/dnaonecalc-host/src/platform/: mod.rs
src/dnaonecalc-host/src/services/: editor_session.rs  explore_mode.rs  inspect_mode.rs  live_edit.rs  mod.rs  programmatic_testing.rs  retained_artifacts.rs  shell_composition.rs  spreadsheet_xml.rs  verification_bundle.rs  workbench_mode.rs
src/dnaonecalc-host/src/state/: mod.rs  types.rs
src/dnaonecalc-host/src/test_support/: mod.rs
src/dnaonecalc-host/src/ui/: mod.rs
src/dnaonecalc-host/src/ui/components/: app_shell.rs  explore_shell.rs  formula_editor_surface.rs  inspect_shell.rs  mod.rs  shell_drawer.rs  shell_frame.rs  value_panel.rs  workbench_shell.rs
src/dnaonecalc-host/tests/: browser_mounted.rs  editor.rs  explore.rs  inspect.rs  panels.rs  programmatic_testing.rs  render.rs  scenarios.rs  seams.rs  shell.rs
src/dnaonecalc-host/tests/editor/: editor_app_state_tests.rs  editor_command_tests.rs  editor_projection_tests.rs
src/dnaonecalc-host/tests/explore/: explore_view_model_tests.rs  formula_space_editor_document_tests.rs
src/dnaonecalc-host/tests/inspect/: inspect_view_model_tests.rs
src/dnaonecalc-host/tests/panels/: panel_cluster_tests.rs
src/dnaonecalc-host/tests/programmatic_testing/: programmatic_testing_service_tests.rs
src/dnaonecalc-host/tests/render/: app_shell_render_tests.rs  browser_overlay_render_tests.rs  explore_render_tests.rs  inspect_render_tests.rs
src/dnaonecalc-host/tests/scenarios/: artifacts.rs  fixtures.rs  mode_switching.rs  typing.rs  workspace.rs
src/dnaonecalc-host/tests/seams/: calc_options.rs  capability_snapshot.rs  cell_style.rs  common.rs  comparison_taxonomy.rs  conditional_formatting.rs  extended_value_routing.rs  external_links.rs  format_payload.rs  green_tree_node.rs  host_bindings.rs  locale_expand.rs  parity_matrix.rs  persistence.rs  presentation_propagation.rs  rail_rename.rs  reference_style.rs  replay_capture.rs  rich_value.rs  seam_board.rs  trace_consumption.rs  value_boundary_help.rs  verification_context.rs  witness_handoff.rs
src/dnaonecalc-host/tests/shell/: shell_composition_tests.rs
(+123 files in other folders)
