[package]
name = "dnaonecalc-host"
version = "0.1.0"
edition = "2021"

[features]
default = []
oxfml-live = ["dep:oxfml_core"]

[dependencies]
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlElement", "InputEvent", "KeyboardEvent", "Window", "Document", "Element", "Node"] }
wasm-bindgen = "=0.2.117"
oxfml_core = { path = "../../../OxFml/crates/oxfml_core", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
leptos = { version = "0.8.17", default-features = false, features = ["ssr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { version = "0.8.17", default-features = false, features = ["csr"] }

[dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "=0.3.67"
